# bimi-helper

./: .drone.jsonnet  .drone.yml  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/: dependabot.yml
.github/workflows/: docker_build.yml  main.yml  release.yml
data/: bimi_ca.pem
debian/: service
src/: cert.rs  data.rs  error.rs  handler.rs  main.rs  mini_pki.rs  redis_storage.rs  svg.rs  x509_helpers.rs
test-assets/: paypal.pem  valimail.pem
