[package]
name = "bimi-agent"
version = "0.1.0"
edition = "2018"
authors = ["Vsevolod Stakhov <vsevolod@highsecure.ru>"]
description = "tarpit endpoint for HTTP requests"
repository = "https://github.com/vstakhov/bimi-agent"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
futures = "0.3"
log = "0.4"
structopt = "0.3"
tokio = { version = "1.11", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.7", features = ["net", "time"] }
async-stream = "0.3.0"
warp = { version = "0.3", features = ["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
redis = { version = "0.21", features = ["tokio-comp"] }
thiserror = "1.0"
dashmap = "4.0"
reqwest = { version = "0.11", features = ["json"] }
url = "2.2"
memmem = "0.1"
base64 = "0.13"
bytes = "1.1"
lazy_static = "1.4"
openssl = "0.10"
chrono = "0.4"
openssl-sys = "0.9"
foreign-types = "0.3"
libc = "0.2"
hex = "0.4"

[target."cfg(unix)".dependencies]
privdrop = { version = "0.5", optional = true }

[features]
default = ["drop_privs"]
drop_privs = ["privdrop"]