[package]
name = "bimi-agent"
version = "0.2.0"
edition = "2021"
authors = ["Vsevolod Stakhov <vsevolod@rspamd.com>"]
description = "A REST service to fetch and validate BIMI enabled certificates"
repository = "https://github.com/rspamd/bimi-agent"
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
futures = "0.3"
log = "0.4"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1", features = ["net", "time"] }
async-stream = "0.3"
warp = { version = "0.3", features = ["tls"] }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
redis = { version = "0.23", features = ["tokio-comp"] }
thiserror = "1.0"
dashmap = "6.1"
reqwest = { version = "0.12", features = ["json"] }
url = "2.5"
memmem = "0.1"
base64 = "0.22"
bytes = "1.9"
lazy_static = "1.5"
openssl = "0.10"
chrono = "0.4"
openssl-sys = "0.9"
foreign-types = "0.5"
libc = "0.2"
hex = "0.4"
data-url = "0.3"
flate2 = "1.0"
der-parser = "9.0"
nom = "7.1"

[target."cfg(unix)".dependencies]
privdrop = { version = "0.5", optional = true }

[features]
default = ["drop_privs"]
drop_privs = ["privdrop"]

[package.metadata.deb]
maintainer = "Vsevolod Stakhov <vsevolod@rspamd.com>"
copyright = "2022, Vsevolod Stakhov <vsevolod@rspamd.com>"
license-file = ["LICENSE.md", "0"]
extended-description = """\
A REST service to fetch and verify BIMI certificates
."""
depends = "$auto"
section = "net"
priority = "optional"
assets = [
    ["target/release/bimi-agent", "usr/bin/", "755"],
    ["data/bimi_ca.pem", "usr/share/bimi-agent", "644"],
    ["README.md", "usr/share/doc/bimi-agent/README", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

[package.metadata.generate-rpm]
name = "bimi-agent"
license = "ASL 2.0"
assets = [
    { source = "target/release//bimi-agent", dest = "/usr/bin/bimi-agent", mode = "755" },
    { source = "debian/service", dest = "/lib/systemd/system/bimi-helper.service", mode = "644" },
    { source = "data/bimi_ca.pem", dest = "/usr/share/bimi-agent", mode = "644"},
]